--- a/cu-smallpt/cu-smallpt.vcxproj
+++ b/cu-smallpt/cu-smallpt.vcxproj
@@ -163,7 +163,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClInclude Include="math_tools.h" />
     <ClInclude Include="sampling.cuh" />
     <ClInclude Include="specular.cuh" />
-    <ClInclude Include="sphere.cuh" />
+    <ClInclude Include="sphere.h" />
     <ClInclude Include="vector.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
