--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,22 @@
-*.hpp    linguist-language=cu
+###############################################################################
+# Auto detect text files and perform LF normalization
+###############################################################################
+* text=auto
+
+###############################################################################
+# Explicitly declare CRLF normalization for the following files
+###############################################################################
+
+# Header Files
+*.cuh		text eol=crlf
+*.h			text eol=crlf
+*.hpp		text eol=crlf
+*.inc		text eol=crlf
+*.inl		text eol=crlf
+*.tpp		text eol=crlf
+
+# Source Files
+*.c			text eol=crlf
+*.cc		text eol=crlf
+*.cpp		text eol=crlf
+*.cu		text eol=crlf
