--- a/cu-smallpt/cu-smallpt.vcxproj
+++ b/cu-smallpt/cu-smallpt.vcxproj
@@ -19,11 +19,10 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="cu-smallpt\src\cu-smallpt.hpp" />
     <ClInclude Include="cu-smallpt\src\cuda_tools.hpp" />
     <ClInclude Include="cu-smallpt\src\geometry.cuh" />
     <ClInclude Include="cu-smallpt\src\imageio.hpp" />
-    <ClInclude Include="cu-smallpt\src\math_tools.hpp" />
+    <ClInclude Include="cu-smallpt\src\math.hpp" />
     <ClInclude Include="cu-smallpt\src\sampling.cuh" />
     <ClInclude Include="cu-smallpt\src\specular.cuh" />
     <ClInclude Include="cu-smallpt\src\sphere.hpp" />
@@ -35,7 +34,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{8F3A6489-C16D-4BA6-AC32-FB5C82479753}</ProjectGuid>
     <RootNamespace>cu_smallpt</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -66,7 +65,7 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
-    <Import Project="$(VCTargetsPath)\BuildCustomizations\CUDA 9.0.props" />
+    <Import Project="$(VCTargetsPath)\BuildCustomizations\CUDA 9.2.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
@@ -187,6 +186,6 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
-    <Import Project="$(VCTargetsPath)\BuildCustomizations\CUDA 9.0.targets" />
+    <Import Project="$(VCTargetsPath)\BuildCustomizations\CUDA 9.2.targets" />
   </ImportGroup>
 </Project>
